# glimpse

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md  rust-toolchain.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  permission.rs
crates/core/: Cargo.toml
crates/core/src/: capture.rs  cleanup.rs  clipboard.rs  config.rs  gesture.rs  lib.rs  ocr.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: hook.rs  main.rs  permission.rs  popup.rs  ring.rs  tray.rs  updater.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: lib.rs  protocol.rs  tools.rs
docs/: CONTRIBUTING.md  MCP.md  PRIVACY.md  RECORDING.md
