[package]
name = "glimpse-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Glimpse daemon: tray icon, mouse hook, popup UI, embedded MCP server."

[[bin]]
name = "glimpse-daemon"
path = "src/main.rs"

[dependencies]
glimpse-core = { workspace = true }
glimpse-mcp = { workspace = true }
windows = { workspace = true }
eframe = { workspace = true }
egui = { workspace = true }
tray-icon = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
self_update = { workspace = true }
directories = { workspace = true }
